unpackaged/main/default/objects/OpportunityLineItem/fields/ADSKVIRRate__c.field-meta.xml
<CustomField>
    <fullName>ADSKVIRRate__c</fullName>
    <label>Autodesk VIR Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>