unpackaged/main/default/objects/OpportunityLineItem/fields/APR_Number__c.field-meta.xml
<CustomField>
    <fullName>APR_Number__c</fullName>
    <formula>0.088</formula>
    <label>APR Number</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>