unpackaged/main/default/objects/OpportunityLineItem/fields/Business_Type_ro__c.field-meta.xml
<CustomField>
    <fullName>Business_Type_ro__c</fullName>
    <label>Business Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>