unpackaged/main/default/objects/OpportunityLineItem/fields/BusinessType__c.field-meta.xml
<CustomField>
    <fullName>BusinessType__c</fullName>
    <formula>IF(ISBLANK(TEXT(BusinessType2__c)),
  IF(PricebookEntry.Product2.NewBusiness__c,
    "New",
    CASE( Opportunity.Type,
      "New Customer New Business", "New",
      "Existing Customer New Business", "New",
      "Existing Customer Maintenance Renewal", "Renewal",
      "Existing Customer Mixed Business", "Mixed",
      "Supplier Credit/Rebate", "Credit/Rebate",
      "Marketing Funding/Cost", "Marketing",
      "Other"
    )
  ),
  TEXT(BusinessType2__c)
)</formula>
    <label>Business Type (Data)</label>
    <type>Text</type>
</CustomField>