unpackaged/main/default/objects/OpportunityLineItem/fields/Buy_Price__c.field-meta.xml
<CustomField>
    <fullName>Buy_Price__c</fullName>
    <inlineHelpText>The amount the product costs for Majenta. (List price less discount).</inlineHelpText>
    <label>Buy Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>