unpackaged/main/default/objects/OpportunityLineItem/fields/Buy_Price_Calc__c.field-meta.xml
<CustomField>
    <fullName>Buy_Price_Calc__c</fullName>
    <formula>List_Amended_Price__c - ( List_Amended_Price__c * PricebookEntry.Product2.Supplier_Discount__c )</formula>
    <label>Buy Price Calc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>