unpackaged/main/default/objects/OpportunityLineItem/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.Category__c)</formula>
    <label>Category</label>
    <type>Text</type>
</CustomField>