unpackaged/main/default/objects/OpportunityLineItem/fields/Category_ro__c.field-meta.xml
<CustomField>
    <fullName>Category_ro__c</fullName>
    <label>CategoryRO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>