unpackaged/main/default/objects/OpportunityLineItem/fields/Commision_Business_Type_Rate__c.field-meta.xml
<CustomField>
    <fullName>Commision_Business_Type_Rate__c</fullName>
    <formula>IF(Business_Type_ro__c = "New",
CASE( Product_Type_ro__c,
"Software", 0.1,
"Hardware", 0.1,
"Maintenance", 0.1,
"Services", 0.075,
"Training", 0.075,
"Support Contract", 0.075,
0), 0.05)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Type Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>