unpackaged/main/default/objects/OpportunityLineItem/fields/Commision_Final_Rate__c.field-meta.xml
<CustomField>
    <fullName>Commision_Final_Rate__c</fullName>
    <formula>Commision_Customer_Type_Rate__c * Commision_Business_Type_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commision Rate (Admin)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>