unpackaged/main/default/objects/OpportunityLineItem/fields/Commision_Final_Rate_Secure__c.field-meta.xml
<CustomField>
    <fullName>Commision_Final_Rate_Secure__c</fullName>
    <formula>IF(Opportunity.OwnerId = $User.Id,
Commision_Final_Rate__c *  $User.Commision_Rate__c,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commision Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>