unpackaged/main/default/objects/OpportunityLineItem/fields/Contains_Monthly_and_AutoDesk__c.field-meta.xml
<CustomField>
    <fullName>Contains_Monthly_and_AutoDesk__c</fullName>
    <formula>IF(CONTAINS(Product_Description__c,"Monthly"),TRUE,
IF(CONTAINS(Product_Description__c,"monthly"),TRUE,
IF(CONTAINS(Product_Description__c,"Autodesk"),TRUE,
IF(CONTAINS(Product_Description__c,"autodesk"),TRUE,
FALSE))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contains Monthly and AutoDesk</label>
    <type>Checkbox</type>
</CustomField>