unpackaged/main/default/objects/OpportunityLineItem/fields/Contract_Length_Months__c.field-meta.xml
<CustomField>
    <fullName>Contract_Length_Months__c</fullName>
    <label>Contract Length (Months) (Legacy)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>