unpackaged/main/default/objects/OpportunityLineItem/fields/ContractLengthMonths__c.field-meta.xml
<CustomField>
    <fullName>ContractLengthMonths__c</fullName>
    <formula>( FinishDate__c - StartDate__c )/30.5</formula>
    <label>Contract Length (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>