unpackaged/main/default/objects/OpportunityLineItem/fields/Current_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Expiry_Date__c</fullName>
    <label>Current Expiry Date</label>
    <type>Date</type>
</CustomField>