unpackaged/main/default/objects/OpportunityLineItem/fields/Customer_Type_ro__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type_ro__c</fullName>
    <label>Customer Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>