unpackaged/main/default/objects/OpportunityLineItem/fields/DatechEarnbackRate__c.field-meta.xml
<CustomField>
    <fullName>DatechEarnbackRate__c</fullName>
    <label>Datech Earnback Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>