unpackaged/main/default/objects/OpportunityLineItem/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.Distributor2__c)</formula>
    <label>Distributor</label>
    <type>Text</type>
</CustomField>