unpackaged/main/default/objects/OpportunityLineItem/fields/Done_via_Datajob__c.field-meta.xml
<CustomField>
    <fullName>Done_via_Datajob__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Done via Datajob</label>
    <type>Checkbox</type>
</CustomField>