unpackaged/main/default/objects/OpportunityLineItem/fields/DS_Type__c.field-meta.xml
<CustomField>
    <fullName>DS_Type__c</fullName>
    <label>Dassault Revenue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALC</fullName>
            </value>
            <value>
                <fullName>ASC</fullName>
            </value>
            <value>
                <fullName>PLC</fullName>
            </value>
            <value>
                <fullName>PSC</fullName>
            </value>
            <value>
                <fullName>QLC</fullName>
            </value>
            <value>
                <fullName>QSC</fullName>
            </value>
            <value>
                <fullName>TBL2</fullName>
            </value>
            <value>
                <fullName>TBL3</fullName>
            </value>
            <value>
                <fullName>YLC</fullName>
            </value>
            <value>
                <fullName>YSC</fullName>
            </value>
            <value>
                <fullName>TSC3</fullName>
            </value>
            <value>
                <fullName>TCS3</fullName>
                <isActive>false</isActive>
                <label>TCS3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>