unpackaged/main/default/objects/OpportunityLineItem/fields/Export_related_data__c.field-meta.xml
<CustomField>
    <fullName>Export_related_data__c</fullName>
    <formula>Opportunity.Account.Export_related_data__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Export related data</label>
    <type>Checkbox</type>
</CustomField>