unpackaged/main/default/objects/OpportunityLineItem/fields/Finish_Date__c.field-meta.xml
<CustomField>
    <fullName>Finish_Date__c</fullName>
    <formula>Contract_Length_Months__c + Current_Expiry_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finish Date (Legacy)</label>
    <type>Date</type>
</CustomField>