unpackaged/main/default/objects/OpportunityLineItem/fields/Flex_Target__c.field-meta.xml
<CustomField>
    <fullName>Flex_Target__c</fullName>
    <formula>Min_Target_Test__c*VALUE(TEXT(Target_Achievable_Rate__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flex Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>