unpackaged/main/default/objects/OpportunityLineItem/fields/HasADSKTBP__c.field-meta.xml
<CustomField>
    <fullName>HasADSKTBP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autodesk TBP</label>
    <type>Checkbox</type>
</CustomField>