unpackaged/main/default/objects/OpportunityLineItem/fields/HasADSKVIR__c.field-meta.xml
<CustomField>
    <fullName>HasADSKVIR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autodesk VIR</label>
    <type>Checkbox</type>
</CustomField>