unpackaged/main/default/objects/OpportunityLineItem/fields/HasDatechEarnback__c.field-meta.xml
<CustomField>
    <fullName>HasDatechEarnback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Datech Earnback</label>
    <type>Checkbox</type>
</CustomField>