unpackaged/main/default/objects/OpportunityLineItem/fields/Legacy_Opp_TESTER_Manual__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Opp_TESTER_Manual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legacy Opp TESTER Manual</label>
    <type>Checkbox</type>
</CustomField>