unpackaged/main/default/objects/OpportunityLineItem/fields/Legacy_Opportunity_Total_Autodesk_TBP__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Opportunity_Total_Autodesk_TBP__c</fullName>
    <description>This currency field holds the old value of all opportunities with close date &lt; 01/08/2016...</description>
    <label>Legacy Opportunity Total Autodesk TBP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>