unpackaged/main/default/objects/OpportunityLineItem/fields/List_Amended_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Amended_Price__c</fullName>
    <formula>IF( List_Discounted_Price__c   &lt;= 0, List_Price__c,  List_Discounted_Price__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Amended Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>