unpackaged/main/default/objects/OpportunityLineItem/fields/List_Discount__c.field-meta.xml
<CustomField>
    <fullName>List_Discount__c</fullName>
    <formula>IF( List_Discounted_Price__c  &lt;= 0 || List_Price__c &lt;= 0, 
0, 
( List_Price__c - List_Discounted_Price__c ) / List_Price__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>