unpackaged/main/default/objects/OpportunityLineItem/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <formula>(TotalPrice -  Total_Buy__c) + TotalAutodeskTBP__c + TotalAutodeskVIR__c + TotalDatechEarnback__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>