unpackaged/main/default/objects/OpportunityLineItem/fields/Min_Target__c.field-meta.xml
<CustomField>
    <fullName>Min_Target__c</fullName>
    <label>Min Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>