unpackaged/main/default/objects/OpportunityLineItem/fields/Min_Target_Test__c.field-meta.xml
<CustomField>
    <fullName>Min_Target_Test__c</fullName>
    <label>Max Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>