unpackaged/main/default/objects/OpportunityLineItem/fields/Min_Target_Test_Variance__c.field-meta.xml
<CustomField>
    <fullName>Min_Target_Test_Variance__c</fullName>
    <formula>Margin__c / Min_Target_Test__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Min Target Test Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>