unpackaged/main/default/objects/OpportunityLineItem/fields/Monthly_Payment_36_Months__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payment_36_Months__c</fullName>
    <formula>UnitPrice  + ( 0.088 * UnitPrice) / 36</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Payment (36 Months)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>