unpackaged/main/default/objects/OpportunityLineItem/fields/Net_Cost_of_Financing__c.field-meta.xml
<CustomField>
    <fullName>Net_Cost_of_Financing__c</fullName>
    <label>Net Cost of Financing</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>