unpackaged/main/default/objects/OpportunityLineItem/fields/NOI__c.field-meta.xml
<CustomField>
    <fullName>NOI__c</fullName>
    <formula>PricebookEntry.Product2.NumberOfRevenueInstallments</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NOI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>