unpackaged/main/default/objects/OpportunityLineItem/fields/Opp_close_Date__c.field-meta.xml
<CustomField>
    <fullName>Opp_close_Date__c</fullName>
    <formula>Opportunity.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp close Date</label>
    <type>Date</type>
</CustomField>