unpackaged/main/default/objects/OpportunityLineItem/fields/Opportunity_Line_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Line_Item_ID__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Line Item ID</label>
    <type>Text</type>
</CustomField>