unpackaged/main/default/objects/OpportunityLineItem/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <formula>PricebookEntry.Product2.ProductCode</formula>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>