unpackaged/main/default/objects/OpportunityLineItem/fields/Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_ID__c</fullName>
    <formula>Support_Product__r.Product_ID__c</formula>
    <label>Product ID</label>
    <type>Text</type>
</CustomField>