unpackaged/main/default/objects/OpportunityLineItem/fields/Product_Monthly_Amount__c.field-meta.xml
<CustomField>
    <fullName>Product_Monthly_Amount__c</fullName>
    <label>Product Monthly Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>