unpackaged/main/default/objects/OpportunityLineItem/fields/Product_Type_ro__c.field-meta.xml
<CustomField>
    <fullName>Product_Type_ro__c</fullName>
    <label>Product Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>