unpackaged/main/default/objects/OpportunityLineItem/fields/ProductSubtype__c.field-meta.xml
<CustomField>
    <fullName>ProductSubtype__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.Subtype__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Subtype (Data)</label>
    <type>Text</type>
</CustomField>