unpackaged/main/default/objects/OpportunityLineItem/fields/ProductSubtype_ro__c.field-meta.xml
<CustomField>
    <fullName>ProductSubtype_ro__c</fullName>
    <label>Product Subtype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>