unpackaged/main/default/objects/OpportunityLineItem/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <formula>TEXT( PricebookEntry.Product2.Type__c )</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>