unpackaged/main/default/objects/OpportunityLineItem/fields/RevenueToSiemens__c.field-meta.xml
<CustomField>
    <fullName>RevenueToSiemens__c</fullName>
    <formula>IF( Category__c == "Siemens", Total_Buy__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue to Siemens</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>