unpackaged/main/default/objects/OpportunityLineItem/fields/Sale_VAT__c.field-meta.xml
<CustomField>
    <fullName>Sale_VAT__c</fullName>
    <formula>(Total_Sale_Price__c * 0.2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sale VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>