unpackaged/main/default/objects/OpportunityLineItem/fields/Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Serial_No__c</fullName>
    <formula>Support_Product__r.Serial_Number__c</formula>
    <label>Serial No.</label>
    <type>Text</type>
</CustomField>