unpackaged/main/default/objects/OpportunityLineItem/fields/SerialNo__c.field-meta.xml
<CustomField>
    <fullName>SerialNo__c</fullName>
    <label>Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>