unpackaged/main/default/objects/OpportunityLineItem/fields/Software_Type__c.field-meta.xml
<CustomField>
    <fullName>Software_Type__c</fullName>
    <formula>IF(AND(
CONTAINS(Product_Description__c, "Autodesk"),
CONTAINS(Product_Description__c, "Monthly")),
"Autodesk Monthly",
IF(AND(
CONTAINS(Product_Description__c, "Autodesk"),
CONTAINS(Product_Description__c, "Quarterly")),
"Autodesk Quarterly",
null
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Software Type</label>
    <type>Text</type>
</CustomField>