unpackaged/main/default/objects/OpportunityLineItem/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <formula>Support_Product__r.SC_Start_Date__c</formula>
    <label>Start Date (Legacy)</label>
    <type>Date</type>
</CustomField>