unpackaged/main/default/objects/OpportunityLineItem/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <formula>PricebookEntry.Product2.Supplier__r.Name</formula>
    <label>Supplier</label>
    <type>Text</type>
</CustomField>