unpackaged/main/default/objects/OpportunityLineItem/fields/Supplier_Discount__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Discount__c</fullName>
    <formula>( List_Amended_Price__c - Buy_Price__c ) / List_Amended_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>