unpackaged/main/default/objects/OpportunityLineItem/fields/Support_Product__c.field-meta.xml
<CustomField>
    <fullName>Support_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support Product</label>
    <referenceTo>Support_Product__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>