unpackaged/main/default/objects/OpportunityLineItem/fields/Target_Achievable_Rate__c.field-meta.xml
<CustomField>
    <fullName>Target_Achievable_Rate__c</fullName>
    <defaultValue>TEXT(1.00)</defaultValue>
    <label>Target Achievable Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.40</fullName>
            </value>
            <value>
                <fullName>0.60</fullName>
            </value>
            <value>
                <fullName>0.75</fullName>
            </value>
            <value>
                <fullName>0.80</fullName>
            </value>
            <value>
                <fullName>0.85</fullName>
            </value>
            <value>
                <fullName>0.90</fullName>
            </value>
            <value>
                <fullName>0.95</fullName>
            </value>
            <value>
                <fullName>1.00</fullName>
            </value>
            <value>
                <fullName>1.05</fullName>
            </value>
            <value>
                <fullName>1.10</fullName>
            </value>
            <value>
                <fullName>1.15</fullName>
            </value>
            <value>
                <fullName>1.20</fullName>
            </value>
            <value>
                <fullName>1.25</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>