unpackaged/main/default/objects/OpportunityLineItem/fields/TEST_CS__c.field-meta.xml
<CustomField>
    <fullName>TEST_CS__c</fullName>
    <formula>IF(
AND(Opportunity.CloseDate  &lt;  DATE(2016,8,1),
HasADSKTBP__c = True)
,
Total_Buy__c * ADSKTBPRate__c
, 
IF(HasADSKTBP__c = True, Total_List_Price__c * ADSKTBPRate__c, 
0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TEST CS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>