unpackaged/main/default/objects/OpportunityLineItem/fields/Total_Autodesk_TBP_after_1_8_16__c.field-meta.xml
<CustomField>
    <fullName>Total_Autodesk_TBP_after_1_8_16__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Total Autodesk TBP after 1/8/16</label>
    <type>Checkbox</type>
</CustomField>