unpackaged/main/default/objects/OpportunityLineItem/fields/Total_Buy__c.field-meta.xml
<CustomField>
    <fullName>Total_Buy__c</fullName>
    <formula>Quantity *  Buy_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Buy Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>