unpackaged/main/default/objects/OpportunityLineItem/fields/Total_Commision__c.field-meta.xml
<CustomField>
    <fullName>Total_Commision__c</fullName>
    <formula>Margin__c * Commision_Final_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Commision (Admin)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>