unpackaged/main/default/objects/OpportunityLineItem/fields/Total_Commision_Secure__c.field-meta.xml
<CustomField>
    <fullName>Total_Commision_Secure__c</fullName>
    <formula>IF(Opportunity.OwnerId = $User.Id,
$User.Commision_Rate__c * Total_Commision__c,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Commision</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>