unpackaged/main/default/objects/OpportunityLineItem/fields/Total_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_List_Price__c</fullName>
    <formula>List_Price__c * Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>