unpackaged/main/default/objects/OpportunityLineItem/fields/Total_Majenta_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Majenta_Discount__c</fullName>
    <formula>(List_Amended_Price__c - UnitPrice) *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Majenta Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>