unpackaged/main/default/objects/OpportunityLineItem/fields/Total_Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Sale_Price__c</fullName>
    <formula>UnitPrice  *  Quantity</formula>
    <label>Total Sale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>