unpackaged/main/default/objects/OpportunityLineItem/fields/TotalAmountAnnual__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountAnnual__c</fullName>
    <formula>IF(ContractLengthMonths__c&lt;=0,
  Total_Sale_Price__c,
  (Total_Sale_Price__c/ROUND(ContractLengthMonths__c,0))*12
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>