unpackaged/main/default/objects/OpportunityLineItem/fields/TotalAutodeskTBP__c.field-meta.xml
<CustomField>
    <fullName>TotalAutodeskTBP__c</fullName>
    <description>Old Formula - 

IF(HasADSKTBP__c,
  Total_Buy__c * ADSKTBPRate__c, 
  0
)</description>
    <formula>IF( 
AND(
NOT(
ISNULL(Legacy_Opportunity_Total_Autodesk_TBP__c)),
Done_via_Datajob__c = True, 
HasADSKTBP__c = True),
 
Total_Buy__c * ADSKTBPRate__c, 

IF(HasADSKTBP__c = True, Total_List_Price__c * ADSKTBPRate__c, 
0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Autodesk TBP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>