unpackaged/main/default/objects/OpportunityLineItem/fields/TotalAutodeskVIR__c.field-meta.xml
<CustomField>
    <fullName>TotalAutodeskVIR__c</fullName>
    <formula>IF(HasADSKVIR__c,
  Total_Buy__c * ADSKVIRRate__c, 
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Autodesk VIR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>