unpackaged/main/default/objects/OpportunityLineItem/fields/TotalBuyAnnual__c.field-meta.xml
<CustomField>
    <fullName>TotalBuyAnnual__c</fullName>
    <formula>IF(ContractLengthMonths__c&lt;=0,
  Total_Buy__c,
  (Total_Buy__c/ROUND(ContractLengthMonths__c,0))*12
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Total Buy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>