unpackaged/main/default/objects/OpportunityLineItem/fields/TotalDatechEarnback__c.field-meta.xml
<CustomField>
    <fullName>TotalDatechEarnback__c</fullName>
    <formula>IF(HasDatechEarnback__c,
  Total_Buy__c  * DatechEarnbackRate__c, 
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Datech Earnback</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>