unpackaged/main/default/objects/OpportunityLineItem/fields/Trigger_Process__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Process</label>
    <type>Checkbox</type>
</CustomField>