unpackaged/main/default/objects/OpportunityLineItem/fields/X16_Digit_id__c.field-meta.xml
<CustomField>
    <fullName>X16_Digit_id__c</fullName>
    <formula>OpportunityId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>16 Digit ID</label>
    <type>Text</type>
</CustomField>