unpackaged/main/default/objects/OpportunityLineItem/validationRules/Line_Description_Must_Be_Filled_In.validationRule-meta.xml
<ValidationRule>
    <fullName>Line_Description_Must_Be_Filled_In</fullName>
    <active>false</active>
    <errorConditionFormula>LEN( Description ) &lt; 5</errorConditionFormula>
    <errorDisplayField>Description</errorDisplayField>
    <errorMessage>You must complete Line Description</errorMessage>
</ValidationRule>